--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
 anyascii==0.3.2
 anyio==4.6.0
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+asttokens==2.4.1
 attrs==24.2.0
 audio-recorder-streamlit==0.0.10
 audioread==3.0.1
@@ -19,25 +19,25 @@ babel==2.16.0
 blinker==1.8.2
 boto3==1.35.28
 botocore==1.35.28
-Brotli @ file:///croot/brotli-split_1714483155106/work
+Brotli==1.0.9
 cached_path==1.6.3
 cachetools==5.5.0
 cdifflib==1.2.6
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1725278078093/work/certifi
+certifi==2024.8.30
 cffi==1.17.1
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
+charset-normalizer==3.3.2
 chattts==0.1.1
 click==8.1.7
 cn2an==0.5.22
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+comm==0.2.2
 contourpy==1.3.0
 crcmod==1.7
 cryptography==43.0.1
 cycler==0.12.1
 Cython==3.0.11
 dateparser==1.1.8
-debugpy @ file:///croot/debugpy_1690905042057/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+debugpy==1.6.7
+decorator==5.1.1
 Deprecated==1.2.14
 Distance==0.1.3
 docopt==0.6.2
@@ -46,14 +46,14 @@ einops==0.8.0
 einx==0.3.0
 encodec==0.1.1
 eng_to_ipa==0.0.2
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1643888246732/work
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
+entrypoints==0.4
+exceptiongroup==1.2.2
+executing==2.1.0
 fastapi==0.115.0
 ffmpeg==1.4
 ffmpeg-python==0.2.0
 ffmpy==0.4.0
-filelock @ file:///croot/filelock_1700591183607/work
+filelock==3.13.1
 fonttools==4.54.1
 frozendict==2.4.4
 frozenlist==1.4.1
@@ -65,7 +65,7 @@ g2p-en==2.1.0
 g2pkk==0.1.2
 gitdb==4.0.11
 GitPython==3.1.43
-gmpy2 @ file:///tmp/build/80754af9/gmpy2_1645455533097/work
+gmpy2==2.1.2
 google-api-core==2.20.0
 google-auth==2.35.0
 google-cloud-core==2.4.1
@@ -91,20 +91,20 @@ hydra-core==1.3.2
 idna==3.10
 importlib_resources==6.4.5
 inflect==7.0.0
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1719845459717/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1725050136642/work
+ipykernel==6.29.5
+ipython==8.27.0
 jaconv==0.4.0
 jamo==0.4.1
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
+jedi==0.19.1
 jieba==0.42.1
-Jinja2 @ file:///croot/jinja2_1716993405101/work
+Jinja2==3.1.4
 jmespath==0.10.0
 joblib==1.4.2
 jsonlines==1.2.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
-jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1654730843242/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
+jupyter-client==7.3.4
+jupyter_core==5.7.2
 kaldiio==2.18.0
 kiwisolver==1.4.7
 langid==1.1.6
@@ -114,20 +114,20 @@ llvmlite==0.43.0
 loguru==0.7.2
 Markdown==3.7
 markdown-it-py==3.0.0
-MarkupSafe @ file:///croot/markupsafe_1704205993651/work
+MarkupSafe==2.1.3
 matplotlib==3.9.2
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 mecab-python3==1.0.9
 mkl-fft==1.3.1
-mkl-random @ file:///home/builder/ci_310/mkl_random_1641843545607/work
+mkl-random==1.2.2
 mkl-service==2.4.0
 modelscope==1.18.1
-mpmath @ file:///croot/mpmath_1690848262763/work
+mpmath==1.3.0
 msgpack==1.1.0
 narwhals==1.8.4
 nemo_text_processing==1.0.2
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
+nest_asyncio==1.6.0
 networkx==2.8.8
 ninja==1.11.1.1
 nltk==3.9.1
@@ -151,22 +151,23 @@ nvitop==1.3.2
 omegaconf==2.3.0
 orjson==3.10.7
 oss2==2.19.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1718189413536/work
+packaging==24.1
 pandas==2.2.3
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-pillow @ file:///croot/pillow_1721059439630/work
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.4.0
+pip==24.2
 plac==1.4.3
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work
+platformdirs==4.3.6
 pooch==1.8.2
 proces==0.1.7
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1727341649933/work
+prompt_toolkit==3.0.48
 proto-plus==1.24.0
 protobuf==3.20.0
-psutil @ file:///opt/conda/conda-bld/psutil_1656431268089/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
+psutil==5.9.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyarrow==17.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
@@ -177,26 +178,27 @@ pydantic==2.9.2
 pydantic_core==2.23.4
 pydeck==0.9.1
 pydub==0.25.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
+Pygments==2.18.0
+PyJWT==2.8.0
 pykakasi==2.2.1
 pynini==2.1.5
 pynndescent==0.5.13
 pyparsing==3.1.4
 pypinyin==0.50.0
-PySocks @ file:///home/builder/ci_310/pysocks_1640793678128/work
+PySocks==1.7.1
 python-crfsuite==0.9.10
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+python-dateutil==2.9.0
 python-dotenv==1.0.1
 python-multipart==0.0.10
 pytorch-wpe==0.0.1
 pytz==2024.2
-PyYAML @ file:///croot/pyyaml_1698096049011/work
-pyzmq @ file:///croot/pyzmq_1705605076900/work
+PyYAML==6.0.1
+pyzmq==25.1.2
 quantile-python==1.1
 ray==2.37.0
 referencing==0.35.1
 regex==2024.9.11
-requests @ file:///croot/requests_1721410876868/work
+requests==2.32.3
 resampy==0.4.3
 rich==13.8.1
 rpds-py==0.20.0
@@ -209,17 +211,18 @@ scikit-learn==1.5.2
 scipy==1.14.1
 semantic-version==2.10.0
 sentencepiece==0.1.99
+setuptools==75.1.0
 shellingham==1.5.4
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 soundfile==0.12.1
 soxr==0.5.0.post1
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+stack-data==0.6.2
 starlette==0.38.6
 streamlit==1.38.0
 streamlit-lottie==0.0.5
-sympy @ file:///croot/sympy_1724938189289/work
+sympy==1.13.2
 tenacity==8.5.0
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
@@ -234,21 +237,21 @@ torch==2.4.1
 torch-complex==0.4.4
 torchaudio==2.4.1
 torchvision==0.16.2
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1648827254365/work
+tornado==6.1
 tqdm==4.66.5
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
+traitlets==5.14.3
 transformers==4.41.2
 triton==3.0.0
 txtsplit==1.0.0
 typer==0.12.5
-typing_extensions @ file:///croot/typing_extensions_1715268824938/work
+typing_extensions==4.11.0
 tzdata==2024.2
 tzlocal==5.2
 umap-learn==0.5.6
 Unidecode==1.3.7
 unidic==1.1.0
 unidic-lite==1.0.8
-urllib3 @ file:///croot/urllib3_1718912636303/work
+urllib3==2.2.2
 uvicorn==0.30.6
 uvloop==0.20.0
 vector-quantize-pytorch==1.17.8
@@ -256,10 +259,12 @@ vocos==0.1.0
 wasabi==0.10.1
 watchdog==4.0.2
 watchfiles==0.24.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+wcwidth==0.2.13
 websockets==12.0
 Werkzeug==3.0.4
 WeTextProcessing==1.0.3
 wget==3.2
+wheel==0.44.0
 wrapt==1.16.0
 xformers==0.0.23.post1
+zhipuai==2.1.5.20230904
